--- a/scss/_fixside.scss
+++ b/scss/_fixside.scss
@@ -92,7 +92,7 @@
                 background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
 
                 span {
-                    color: #131313;
+                    color: $black001;
                 }
 
                 .fixsideimg {
@@ -191,7 +191,7 @@
                 }
 
                 &:hover,&:active,&.active {
-                    background: linear-gradient(to bottom, #2d2d2d 0%, #393939 100%);
+                    background: linear-gradient(to bottom, #303030 0%, #393939 100%);
                     color: #dadada;
 
                     &::before {
@@ -201,7 +201,7 @@
             }
 
             div {
-                background: #2c2c2c;
+                background: #2b2b2b;
                 width: 100%;
                 height: 0px;
                 overflow: hidden;
@@ -220,7 +220,7 @@
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        background: #212121;
+                        background: #1f1f1f;
                         color: #53ca2a;
                     }
 
@@ -309,7 +309,7 @@
                 background: linear-gradient(to bottom, #33ab0a 0%, #68e73c 100%);
 
                 span {
-                    color: #131313;
+                    color: $black001;
                 }
 
                 .fixsideimg {
