--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,9 +1,11 @@
+@import "./colorCode";
+
 //header
 header {
     width: 100%;
     min-width: 1480px;
     height: 110px;
-    background: #1f1f1f;
+    background: $black002;
     position: relative;
     z-index: 10;
     overflow: hidden;
@@ -16,14 +18,14 @@ header {
     .top {
         width: 100%;
         height: 25px;
-        background: #131313;
+        background: $black001;
 
         //盤口對照表+設定
         .conversionBtn,.controlBtn {
             float: left;
             width: auto;
             height: 100%;
-            color: #969696;
+            color: $gray001;
             background: transparent;
             margin-left: 15px;
             font-size: 13px;
@@ -41,13 +43,13 @@ header {
                 position: absolute;
                 left: -23px;
                 top: 4px;
-                color: #37bd10;
+                color: $green001;
             }
 
             marquee {
                 line-height: 25px;
                 font-size: 12px;
-                color: #37bd10;
+                color: $green001;
                 overflow: visible;
             }
         }
@@ -56,7 +58,7 @@ header {
         span {
             float: right;
             font-size: 12px;
-            color: #969696;
+            color: $gray001;
             line-height: 25px;
             margin-right: 15px;
         }
@@ -72,8 +74,8 @@ header {
                 height: 15px;
                 border-radius: 30px;
                 margin: 5px 5px 0px 0px;
-                border: solid 1px #37bd10;
-                background: #131313;
+                border: solid 1px $green001;
+                background: $black001;
 
                 &:nth-of-type(2) {
                     background: #ebf1fb;
@@ -103,7 +105,7 @@ header {
             font-weight: bolder;
             text-align: center;
             line-height: 85px;
-            color: #ffffff
+            color: $white001;
         }
 
         //上列表
@@ -121,13 +123,13 @@ header {
                     padding: 0px 10px;
                     height: 76px;
                     line-height: 85px;
-                    color: #ffffff;
+                    color: $white001;
                     border-bottom: solid 5px transparent;
                     font-size: 14px;
 
                     &:hover,&:active,&.active {
-                        border-color: #33ba04;
-                        color: #7df81a;
+                        border-color: $green001;
+                        color: $green001;
                     }
 
                     .fa-user {
@@ -157,14 +159,14 @@ header {
                 position: relative;
 
                 input {
+                    background: #131313;
+                    border: solid 1px #39792d;
+                    color: #ffffff;
                     width: 130px;
                     height: 25px;
                     font-size: 14px;
                     padding-left: 5px;
                     border-radius: 3px;
-                    border: solid 1px #39792d;
-                    background: #131313;
-                    color: #45b51f;
 
                     &::placeholder {
                         color: #999999;
@@ -176,7 +178,7 @@ header {
                     left: 0px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: #45b51f;
+                    color: $green001;
                 }
 
                 .remember {
@@ -184,7 +186,7 @@ header {
                     left: 18px;
                     bottom: -28px;
                     font-size: 14px;
-                    color: #ababab;
+                    color: $white002;
 
                     .cube {
                         left: -18px;
@@ -194,36 +196,20 @@ header {
             }
 
             .loginBtn {
-                background: linear-gradient(to right,#45dc16 0%,#91e820 90%);
-                border: solid 1px #cdff7f;
-                padding: 5px 14px;
+                @include btnStyle001;
+                padding: 6px 14px;
                 border-radius: 3px;
-                color: #131313;
                 font-size: 14px;
                 font-weight: bold;
                 margin-right: 8px;
-
-                &:hover,&:active,&.active {
-                    border-color: #ffffff;
-                    background: #ffffff;
-                    color: #393939;
-                }
             }
 
             .signupBtn {
-                background: linear-gradient(to top,#131313 0%,#323232 100%);
+                @include btnStyle002;
                 border-radius: 3px;
-                color: #ffffff;
                 padding: 6px 14px;
                 font-size: 14px;
                 font-weight: bold;
-                border: solid 1px #2c8e0b;
-
-                &:hover,&:active,&.active {
-                    border-color: #ffffff;
-                    background: #ffffff;
-                    color: #59a936;
-                }
             }
 
             .selectBox {
@@ -235,7 +221,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: #ababab;
+                    color: $white002;
                 }
 
                 //下箭頭
@@ -247,27 +233,17 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: #ababab transparent;
+                    border-color: $white002 transparent;
                     top: 7px;
                     right: 10px;
                 }
 
                 select {
+                    @include selectStyle001;
                     width: 110px;
                     padding: 3px 0px 3px 5px;
-                    background: transparent;
-                    border: solid 1px #707070;
                     border-radius: 3px;
-                    color: #ababab;
                     font-size: 12px;
-                    appearance:none;   
-                    -moz-appearance:none;   
-                    -webkit-appearance:none;
-                    background: #1f1f1f;
-
-                    option {
-                        color: #ababab;
-                    }
                 }
             }
         }
@@ -288,38 +264,30 @@ header {
             //字體
             p {
                 display: inline-block;
-                color: #ababab;
+                color: $white002;
                 font-size: 13px;
                 margin: 10px 5px 0px 0px;
 
                 //信用額度
                 &.quota {
                     padding: 7px 7px 5px;
-                    border: solid 1px #707070;
+                    border: solid 1px $gray003;
                     border-radius: 3px;
-                    background: #1f1f1f;
+                    background: $black002;
                 }
 
                 span {
-                    color: #40c50f;
+                    color: $green001;
                     padding-left: 8px;
                 }
             }
 
             //登出按鈕
             button {
+                @include btnStyle002;
                 border-radius: 3px;
                 padding: 4px 15px;
-                background: linear-gradient(to top,#131313,#323232 100%);
-                color: #40c50f;
                 font-size: 14px;
-                border: solid 1px #2c8e0b;
-
-                &:hover,&:active,&.active {
-                    background: linear-gradient(to bottom,#45dc16 10%,#91e820 90%);
-                    color: #1c1c1c;
-                    border-color: #cdff7f;
-                }
             }
 
             .selectBox {
@@ -331,7 +299,7 @@ header {
                 .fa-globe {
                     float: left;
                     margin: 3px 6px 0px 0px;
-                    color: #ababab;
+                    color: $white002;
                 }
 
                 //下箭頭
@@ -343,27 +311,17 @@ header {
                     height: 0px;
                     border-style: solid;
                     border-width: 10px 8px 0px 8px;
-                    border-color: #ababab transparent;
+                    border-color: $white002 transparent;
                     top: 7px;
                     right:10px;
                 }
 
                 select {
+                    @include selectStyle001;
                     width: 110px;
                     padding: 3px 0px 3px 5px;
-                    background: transparent;
-                    border: solid 1px #ababab;
                     border-radius: 3px;
-                    color: #ababab;
                     font-size: 12px;
-                    background: #1f1f1f;
-                    appearance:none;   
-                    -moz-appearance:none;   
-                    -webkit-appearance:none;
-
-                    option {
-                        color: #ababab;
-                    }
                 }
             }
         }
