--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@
 html {
     width: 100%;
     height: 100%;
-    background: #131313;
+    background: $black001;
 
     body {
         width: 100%;
@@ -27,7 +27,7 @@ html {
         }
     
         &::-webkit-scrollbar-track {
-            background: #131313;
+            background: $black001;
             border-radius: 10px;
         }
     
